IBATIS-509 (Use Boolean.valueOf(b) instead of new Boolean(b)) - applied the attached patch
git-svn-id: https://svn.apache.org/repos/asf/ibatis/trunk@773989 13f79535-47bb-0310-9956-ffa450edef68